--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a th:href="@{/search}">Search</a></li>
-                    <li><a th:href="@{/list}">List</a></li>
+                    <li th:fragment="search"><a th:href="@{/search}">Search</a></li>
+                    <li th:fragment="list"><a th:href="@{/list}">List</a></li>
                 </ul>
             </div>
         </div>
